mediawiki-chart/templates/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      service: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        network/wikinetwork: "true"
        service: db
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          valueFrom:
            configMapKeyRef:
              key: MYSQL_DATABASE
              name: env
        - name: MYSQL_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              name: db-secret
              key: MYSQL_ROOT_PASSWORD
        image: supreetraut/mariadb-wiki
        imagePullPolicy: Always
        name: db
        ports:
        - containerPort: 3306
      restartPolicy: Always
      serviceAccountName: ""
