mediawiki-chart/templates/mediawiki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: mediawiki
  name: mediawiki
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mediawiki
  template:
    metadata:
      labels:
        network/wikinetwork: "true"
        service: mediawiki
    spec:
      containers:
      - image: supreetraut/mediawiki-1.34
        imagePullPolicy: Always
        name: mediawiki
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
