mediawiki-chart/templates/mediawiki-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: mediawiki
  name: mediawiki
spec:
  type: LoadBalancer
  ports:
  - name: "8000"
    port: 8000
    targetPort: 80
  selector:
    service: mediawiki
