mediawiki-chart/templates/wikinetwork-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: wikinetwork
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          network/wikinetwork: "true"
  podSelector:
    matchLabels:
      network/wikinetwork: "true"
